horizontal scroll pga. bredde på hero, fixet

--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 80svh;
     color: partial.$bg-color;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/heroimg.jpg);
